# SmartTutors

./: .replit  app.py  gemini_service.py  models.py  pyproject.toml  replit  requirements.txt  routes.py
static/css/: style.css
static/js/: main.js  speech.js
templates/: 404.html  500.html  admin.html  base.html  buy_tokens.html  chat.html  dashboard.html  history.html  index.html  login.html  register.html
