[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.28.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "sqlalchemy>=2.0.42",
    "werkzeug>=3.1.3",
    "sift-stack-py>=0.8.2",
    "openai>=1.99.2",
    "requests>=2.32.4",
    "pillow>=11.3.0",
]
